--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Danithu</span><br> Web Designer</h1>
 
-                    <a href="#" class="button">Contact</a>
+                    <a href="https://www.instagram.com/danithu.online/" class="button">Contact Instergram</a>
                 </div>
 
                 <div class="home__social">
