--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <body>
         <!--===== HEADER =====-->
         <header class="l-header">
-            <nav class="nav bd-grid">
+            <nav class="nav bd-grid"> 
                 <div>
-                    <a href="#" class="nav__logo">Danithu</a>
+                    <a href="" class="nav__logo">Danithu</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Danithu</span><br> Web Designer</h1>
 
-                    <a href="https://www.instagram.com/danithu.online/" class="button">Contact Instergram</a>
+                    <a href="https://www.instagram.com/danithu.online/" class="button">Contact instagram</a>
                 </div>
 
                 <div class="home__social">
